[package]
name = "ffthumb"
description = "Safe libffmpegthumbnailer wrapper"
version = "0.1.0"
edition = "2021"
license = "WTFPL"

homepage = "https://kirino.io"
repository = "https://github.com/kirino-org/kirino"
build = "build.rs"

[features]
bindgen = ["dep:bindgen"]

[build-dependencies]
bindgen = { version = "0.63.0", optional = true }
pkg-config = "0.3.26"

[profile.release]
opt-level = 3
lto = true
strip = "debuginfo"
