[package]
name = "ffthumb"
description = "Safe libffmpegthumbnailer wrapper"
version = "0.1.0"
edition = "2021"
license = "WTFPL"

homepage = "https://kirino.io"
repository = "https://github.com/kirino-org/kirino"
build = "build.rs"

[dependencies]
libc = "0.2.140"

[build-dependencies]
cc = "1.0.79"
pkg-config = "0.3.26"

[profile.release]
opt-level = 3
lto = true
strip = "debuginfo"
